log/build_2025-06-17_15-48-29/spatial_detector/stderr.log
  File "/home/dev_computer/dai_ws/install/spatial_detector/lib/python3.12/site-packages/spatial_detector/spatial_publisher_node_backup.py", line 35
    ddef detections_cb(self, msg: Detection3DArray):
         ^^^^^^^^^^^^^
SyntaxError: invalid syntax

